--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,32 +1,33 @@
-name: CI
+image: node:20-alpine
 
-on:
-  push:
-    branches: [main, develop]
-  pull_request:
-    branches: [main]
+stages:
+  - install
+  - validate
+  - test
 
-jobs:
-  quality:
-    runs-on: ubuntu-latest
+cache:
+  key:
+    files:
+      - package-lock.json
+  paths:
+    - node_modules/
 
-    steps:
-      - uses: actions/checkout@v4
+install:
+  stage: install
+  script:
+    - npm ci
 
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: 20
-          cache: 'npm'
+lint:
+  stage: validate
+  script:
+    - npm run lint
 
-      - name: Install dependencies
-        run: npm ci
+typecheck:
+  stage: validate
+  script:
+    - npx tsc --noEmit
 
-      - name: Lint
-        run: npm run lint
-
-      - name: Type check
-        run: npx tsc --noEmit
-
-      - name: Test
-        run: npm run test
+test:
+  stage: test
+  script:
+    - npm run test
